--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "multiplayer-maze-adaptive",
+  "name": "maze-engine-pro",
   "version": "1.0.0",
-  "description": "Adaptive Multiplayer Maze with Server List",
+  "description": "Multiplayer Maze Engine with AI Architect",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test case specified\" && exit 1"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "express": "^4.18.2",
-    "socket.io": "^4.5.4"
-  }
+    "socket.io": "^4.7.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
